gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail12378.d
version https://git-lfs.github.com/spec/v1
oid sha256:0d943b261a59e4a77cc0fdab9bc484b0187b6169dd0f46248d8584d8d00da9d3
size 3846
